# google-test-sample

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: db.cpp  db.hpp  pure.cpp
test/: test_db.cpp  test_pure.cpp
